fix(docs): hide more text on mobile

--- a/docs-website/src/styles/global.scss
+++ b/docs-website/src/styles/global.scss
@@ -77,6 +77,9 @@ div[class^="announcementBarContent"] {
           display: none;
         }
       }
+      @media (max-width: 480px) {
+        display: none;
+      }
     }
   }
 
